fix: fix source code text align center

--- a/assets/sass/_common/_normalize.scss
+++ b/assets/sass/_common/_normalize.scss
@@ -198,6 +198,10 @@ figure {
     text-align: center;
 }
 
+figure table {
+    text-align: left !important;
+}
+
 figure figcaption {
     color: rgba(0, 0, 0, 0.7);
 }
